--- a/_themes/tm3/templates/recordings.html
+++ b/_themes/tm3/templates/recordings.html
@@ -31,12 +31,12 @@
                         </li>
                         {{ /entries:listing }}
                     </ul>
-
-                    <div class="grid-pad text-center">
-                        <a class="button nav-button light xx-small" href="#content" id="recordings-button">Recordings</a>
-                    </div>
                 </li>
             </ul>
+
+            <div class="grid text-center">
+                <a class="button nav-button light xx-small" href="#content" id="recordings-button">Back to Top</a>
+            </div>
         </div>
     </div>
 </section>
