--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -37,7 +37,7 @@ a { text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { line-height: 1.35; margin: 0 0 0.5rem 0; }
 h1 { font-size: 2.4rem; }
 h2 { font-size: 2rem; }
-h3 { font-size: 2.75rem; }
+h3 { font-size: 2.5rem; font-weight: 400; }
 h4 { font-size: 1.6rem; }
 h5 { font-size: 1.3rem; font-weight: 400; }
 h6 { font-size: 1rem; font-weight: 400; }
