Fixed a bug in getWindowSize().

--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -9,7 +9,7 @@
             {{ theme:partial src="recording" use_context="true" }}
             {{ /entries:listing }}
 
-            <div class="grid-pad text-center">
+            <div class="grid pad text-center">
                 <a class="button small" href="/recordings">All Recordings</a>
             </div>
         </div>
@@ -31,7 +31,7 @@
 
         {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" }}
 
-        <div class="grid-pad text-center">
+        <div class="grid pad text-center">
             <a class="button small" href="/performances">All Performances</a>
         </div>
     </div>
