Fixed spacing in .pad class

--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -19,7 +19,7 @@
                 {{ theme:partial src="article" truncate="true" use_context="true" }}
                 {{ /entries:listing }}
 
-                <div class="grid-pad text-center">
+                <div class="grid pad text-center">
                     <a class="button light x-small" href="/news">Full Article</a>
                 </div>
             </div>
