--- a/_themes/tm3/templates/article.html
+++ b/_themes/tm3/templates/article.html
@@ -8,7 +8,7 @@
             {{ theme:partial src="article" use_context="true" }}
         </div>
 
-        <div class="grid-pad text-center">
+        <div class="grid pad text-center">
             <a class="button small" href="/news">All News</a>
         </div>
     </div>
