--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -17,11 +17,11 @@
             <div class="grid-pad">
                 {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
                 {{ theme:partial src="article" truncate="true" use_context="true" }}
-                {{ /entries:listing }}
 
                 <div class="grid pad text-center">
-                    <a class="button light x-small" href="/news">Full Article</a>
+                    <a class="button light x-small" href="{{ url }}">Full Article</a>
                 </div>
+                {{ /entries:listing }}
             </div>
         </div>
     </div>
