--- a/_themes/tm3/templates/recordings.html
+++ b/_themes/tm3/templates/recordings.html
@@ -1,7 +1,7 @@
 <section id="content">
     <div class="scroller">
         <div class="grid-pad">
-            <div class="grid-pad text-center">
+            <div class="grid pad text-center">
                 <a class="button nav-button light xx-small" href="#live-performances" id="performances-button">Live Performances</a>
             </div>
 
