Uploaded new photos and the ability to change the color of the page.

--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -16,7 +16,7 @@
 
         <title>{{ _site_name }}{{ if segment_1 }} – {{ title }}{{ endif }}</title>
     </head>
-    <body>
+    <body style="background-color: {{ background_color }};">
         {{ if enable_analytics }}
         {{ theme:partial src="google-analytics" }}
         {{ endif}}
