Uploaded new performance pic

--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -34,7 +34,7 @@
 
 .js #year-selector
 {
-    background-color: #fff;
+    background-color: transparent;
     border-color: rgba(0, 0, 0, 0.1);
     border-radius: 0;
     cursor: pointer;
