--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -52,7 +52,7 @@ strong { font-weight: 700; }
 .gm-style-iw .link:link,
 .gm-style-iw .link:visited { color: #b0120a; }
 
-.aside { background-color: #333; }
+.aside { background-color: #35383D; }
 
 .aside,
 .aside *,
