--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -38,7 +38,7 @@
     border-color: rgba(0, 0, 0, 0.1);
     border-radius: 0;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 700;
     padding: 5px 10px;
     width: 100%;
@@ -54,7 +54,7 @@
     position: absolute;
     right: 0;
     text-align: center;
-    top: 0;
+    top: ;
     width: 44px;
 }
 
@@ -67,7 +67,7 @@
         margin: 0;
         position: absolute;
         right: 10px;
-        top: 20px;
+        top: 30px;
         width: 100px;
         z-index: 1;
     }
