--- a/_themes/tm3/css/contact.css
+++ b/_themes/tm3/css/contact.css
@@ -17,6 +17,18 @@
 
 @media (min-width: 768px)
 {
+    .col-1-3,
+    .col-2-3 { padding-right: 0; width: 100%; }
+}
+
+@media (min-width: 1024px)
+{
+    .col-1-3,
+    .col-2-3 { padding-right: 30px; }
+
+    .col-1-3 { width: 33%; }
+    .col-2-3 { width: 66%; }
+
     #mailing-list-form-wrapper
     {
         padding-top: 90px;
