--- a/_themes/tm3/partials/performances.html
+++ b/_themes/tm3/partials/performances.html
@@ -1,4 +1,4 @@
-<div class="grid negative" id="map">
+<div class="grid" id="map">
     <div id="map-canvas"></div>
 
     <ol class="no-bullets scrollable" id="performance-list">
