--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -4,25 +4,27 @@
     <div class="grid-pad">
         <h2 class="style-1">Latest Release</h2>
 
-        <div class="col-2-3">
-            {{ entries:listing folder="recordings" limit="1" show_hidden="true" show_samples="false" sort_by="datestamp" sort_dir="desc" }}
-            {{ theme:partial src="recording" use_context="true" }}
-            {{ /entries:listing }}
-
-            <div class="grid pad text-center">
-                <a class="button small" href="/recordings">All Recordings</a>
-            </div>
-        </div>
-        <div class="col-1-3 aside">
-            <div class="grid-pad">
-                {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
-                {{ theme:partial src="article" truncate="true" use_context="true" }}
-
-                <div class="grid pad text-center">
-                    <a class="button light x-small" href="{{ url }}">Full Article</a>
-                </div>
+        <div class="grid">
+            <div class="col-2-3">
+                {{ entries:listing folder="recordings" limit="1" show_hidden="true" show_samples="false" sort_by="datestamp" sort_dir="desc" }}
+                {{ theme:partial src="recording" use_context="true" }}
                 {{ /entries:listing }}
             </div>
+            <div class="col-1-3 aside">
+                <div class="grid-pad">
+                    {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
+                    {{ theme:partial src="article" truncate="true" use_context="true" }}
+
+                    <div class="grid pad text-center">
+                        <a class="button light x-small" href="{{ url }}">Full Article</a>
+                    </div>
+                    {{ /entries:listing }}
+                </div>
+            </div>
+        </div>
+
+        <div class="grid pad text-center">
+            <a class="button small" href="/recordings">All Recordings</a>
         </div>
     </div>
 
