--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -37,4 +37,24 @@
             <a class="button small" href="/performances">All Performances</a>
         </div>
     </div>
+
+    <div class="grid-pad">
+        <h2 class="style-1">Live Performances</h2>
+
+        <ul id="live-performances">
+            {{ entries:listing folder="live-performances" show_hidden="true" sort_dir="asc" }}
+            <li>
+                <article class="grid" id="{{ slug }}">
+                    <div class="col-3-4">
+                        <h3>{{ title }}</h3>
+                        <h4>{{ composer }}</h4>
+                    </div>
+                    <div class="col-1-4 text-right">
+                        <a class="sample button x-small pad" href="{{ sample }}">Play Sample</a>
+                    </div>
+                </article>
+            </li>
+            {{ /entries:listing }}
+        </ul>
+    </div>
 </section>
