--- a/_themes/tm3/partials/hero.html
+++ b/_themes/tm3/partials/hero.html
@@ -1,4 +1,4 @@
-<div class="hero{{ if short }} short{{ /if }}" style="background-image: url({{ artwork }}); background-position: {{ vertical_position }} {{ horizontal_position }};">
+<div class="hero{{ if short }} short{{ /if }}">
     {{ if quotes }}
     <div class="quotes">
         {{ quotes sort_by="random" }}
