--- a/_themes/tm3/templates/article.html
+++ b/_themes/tm3/templates/article.html
@@ -1,6 +1,6 @@
 {{ theme:partial src="hero" short="true" use_context="true" }}
 
-<main id="content" role="main">
+<main id="content" role="main" style="background-color: {{ background_color }};">
     <div class="grid-pad">
         <h2 class="style-1">News</h2>
 
