--- a/_themes/tm3/css/icons.css
+++ b/_themes/tm3/css/icons.css
@@ -1,27 +1,44 @@
+@font-face
+{
+    font-family: 'icomoon';
+    src:url('../fonts/icomoon.eot?-wi1uqu');
+    src:url('../fonts/icomoon.eot?#iefix-wi1uqu') format('embedded-opentype'),
+        url('../fonts/icomoon.woff?-wi1uqu') format('woff'),
+        url('../fonts/icomoon.ttf?-wi1uqu') format('truetype'),
+        url('../fonts/icomoon.svg?-wi1uqu#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 [data-icon]::before
 {
-    font-family: 'icons';
+    font-family: 'icomoon';
     font-style: normal;
     font-variant: normal;
     font-weight: normal;
     speak: none;
     text-transform: none;
     vertical-align: middle;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-[data-icon=pen]::before { content: "\e601"; }
-[data-icon=calendar]::before { content: "\e602"; }
-[data-icon=quartet]::before { content: "\e603"; }
-[data-icon=meeting]::before { content: "\e604"; }
-[data-icon=music-conductor]::before { content: "\e606"; }
-[data-icon=news]::before { content: "\e608"; }
-[data-icon=saxophone]::before { content: "\e609"; }
-[data-icon=user]::before { content: "\e60a"; }
-[data-icon=twitter]::before { content: "\e616"; }
-[data-icon=facebook]::before { content: "\e617"; }
-[data-icon=clock]::before { content: "\e619"; }
-[data-icon=globe]::before { content: "\e61a"; }
-[data-icon=ensemble]::before { content: "\e61b"; }
-[data-icon=ticket]::before { content: "\e61c"; }
-[data-icon=down-arrow]::before { content: "\e613"; }
-[data-icon=audio-wave]::before { content: "\e60f"; }
+[data-icon=biography]::before { content: "\e600"; }
+[data-icon=recordings]::before { content: "\e601"; }
+[data-icon=performances]::before { content: "\e602"; }
+[data-icon=premieres]::before { content: "\e603"; }
+[data-icon=press]::before { content: "\e5f3"; }
+[data-icon=saxophone]::before { content: "\e605"; }
+[data-icon=contact]::before { content: "\e606"; }
+[data-icon=news]::before { content: "\e607"; }
+[data-icon=quartet]::before { content: "\e608"; }
+[data-icon=twitter]::before { content: "\e609"; }
+[data-icon=facebook]::before { content: "\e60a"; }
+[data-icon=ensemble]::before { content: "\e60b"; }
+[data-icon=pause]::before { content: "\e60c"; }
+[data-icon=play]::before { content: "\e60d"; }
+[data-icon=menu]::before { content: "\e60e"; }
+[data-icon=close]::before { content: "\e60f"; }
+[data-icon=down]::before { content: "\e604"; }
