--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -1,6 +1,6 @@
 {{ theme:partial src="hero" use_context="true" }}
 
-<main id="content" role="main">
+<main id="content" role="main" style="background-color: {{ background_color }};">
     {{ if booking_title }}
     <div class="grid-pad">
         <h2 class="style-1">{{ booking_title }}</h2>
