--- a/_themes/tm3/templates/news.html
+++ b/_themes/tm3/templates/news.html
@@ -1,6 +1,6 @@
 {{ theme:partial short="true" src="hero" use_context="true" }}
 
-<main id="content" role="main">
+<main id="content" role="main" style="background-color: {{ background_color }};">
     <div class="grid-pad">
         <h2 class="style-1">{{ title }}</h2>
 
