--- a/_themes/tm3/templates/premieres.html
+++ b/_themes/tm3/templates/premieres.html
@@ -1,6 +1,6 @@
 {{ theme:partial src="hero" use_context="true" }}
 
-<section id="content">
+<section id="content" style="background-color: {{ background_color }};">
     <div class="grid-pad">
         <h2 class="style-1">{{ title }}</h2>
 
