--- a/_themes/tm3/css/images.css
+++ b/_themes/tm3/css/images.css
@@ -1,8 +1,14 @@
-body
+.fixed-background
 {
-    background-attachment: fixed;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+    bottom: 0;
+    left: 0;
+    overflow: scroll;
+    position: fixed;
+    right: 0;
+    top: 0;
+    -webkit-overflow-scrolling: touch;
 }
 
 .hero
