--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -52,7 +52,7 @@ strong { font-weight: 700; }
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     font-weight: 400;
     letter-spacing: 0.25rem;
-    margin-bottom: 30px;
+    margin-bottom: 0;
     margin-left: -30px;
     margin-right: -30px;
     padding: 0 30px 10px 30px;
