--- a/_themes/tm3/partials/hero.html
+++ b/_themes/tm3/partials/hero.html
@@ -1,4 +1,4 @@
-<div class="hero{{ if short }} short{{ /if }}">
+<div class="hero">
     {{ if quotes }}
     <div class="quotes">
         {{ quotes sort_by="random" }}
