--- a/_themes/tm3/css/images.css
+++ b/_themes/tm3/css/images.css
@@ -1,14 +1,14 @@
-.fixed-background
+.fixed-hero
 {
     background-size: cover;
     background-repeat: no-repeat;
     bottom: 0;
     left: 0;
-    overflow: scroll;
+    pointer-events: none;
     position: fixed;
-    right: 0;
     top: 0;
-    -webkit-overflow-scrolling: touch;
+    right: 0;
+    z-index: -1;
 }
 
 .hero
@@ -21,13 +21,11 @@
     z-index: 1;
 }
 
-/*.hero *, .hero a.link { color: #fff; }*/
-
 .hero.short { min-height: 325px; }
 
 .hero::before,
 .overlay::before
-{ /* FF3.6+ */ /* Chrome,Safari4+ */ /* Chrome10+,Safari5.1+ */
+{
     background: -o-linear-gradient(bottom, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(bottom, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* IE10+ */
     background: linear-gradient(to top, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* W3C */
