--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -39,7 +39,7 @@ strong { font-weight: 700; }
 .link:visited,
 .gm-style-iw .link,
 .gm-style-iw .link:link,
-.gm-style-iw .link:visited { color: #b0120a; }
+.gm-style-iw .link:visited { color: #3b597d; }
 
 .aside { background-color: #35383D; }
 
