--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -8,8 +8,8 @@
 
 .calendar
 {
-    background-color: #b0120a;
-    border: 1px solid #aaa;
+    background-color: #162432;
+    border: 1px solid #162432;
     color: #fff;
     font-size: 11px;
     font-weight: 700;
@@ -24,7 +24,7 @@
 .calendar .day
 {
     background-color: #fff;
-    color: #222;
+    color: #162432;
     display: block;
     font-size: 28px;
     font-style: normal;
@@ -35,9 +35,9 @@
 .calendar .year
 {
     background-color: #fff;
-    color: #222;
+    color: #162432;
     display: block;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .h-event .p-name
