--- a/_themes/tm3/css/forms.css
+++ b/_themes/tm3/css/forms.css
@@ -36,7 +36,7 @@ legend
 
 .form-errors
 {
-    background-color: #b0120a;
+    background-color: #3b597d;
     color: #fff;
     font-size: 1rem;
     list-style: none;
