--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -27,14 +27,14 @@
 
 .js #year-selector-wrapper
 {
-    margin: 30px 0;
+    margin-bottom: 20px;
     position: relative;
     width: 100%;
 }
 
 .js #year-selector
 {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.5);
     border-color: rgba(0, 0, 0, 0.1);
     border-radius: 0;
     cursor: pointer;
@@ -54,23 +54,18 @@
     position: absolute;
     right: 0;
     text-align: center;
-    top: ;
     width: 44px;
 }
-
-.negative { margin-bottom: -30px }
 
 @media (min-width: 768px)
 {
     .js #year-selector-wrapper
     {
+        bottom: 15px;
+        left: 48%;
         margin: 0;
         position: absolute;
-        right: 10px;
-        top: 30px;
         width: 100px;
-        z-index: 1;
+        z-index: 2;
     }
-
-    .js #year-selector { border: 0; }
 }
