--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -4,7 +4,7 @@
     <div class="grid-pad">
         <h2 class="style-1">Latest Release</h2>
 
-        <div class="grid">
+        <div class="grid-pad negative">
             <div class="col-2-3">
                 {{ entries:listing folder="recordings" limit="1" show_hidden="true" show_samples="false" sort_by="datestamp" sort_dir="desc" }}
                 {{ theme:partial src="recording" use_context="true" }}
@@ -31,7 +31,9 @@
     <div class="grid-pad">
         <h2 class="style-1">Upcoming Performances</h2>
 
-        {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" }}
+        <div class="grid negative">
+            {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" }}
+        </div>
 
         <div class="grid pad text-center">
             <a class="button small" href="/performances">All Performances</a>
