--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -1,3 +1,5 @@
+#performance-list { margin-top: 30px; }
+
 .h-event
 {
     display: block;
@@ -83,6 +85,7 @@
         background-color: rgba(255, 255, 255, 0.5);
         bottom: 0;
         left: 0;
+        margin: 0;
         overflow: auto;
         position: absolute;
         right: 0;
