--- a/_themes/tm3/css/home.css
+++ b/_themes/tm3/css/home.css
@@ -2,7 +2,7 @@
 
 #live-recordings-list
 {
-    margin: 30px -30px 0 -30px;
+    margin: 30px 0;
     padding: 0;
     list-style: none;
     position: relative;
