--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -44,11 +44,11 @@
     <div class="grid-pad no-padding-bottom" id="live-recordings">
         <h2 class="style-1">{{ title }}</h2>
 
-        <div class="grid">
+        <div class="grid-pad negative">
             <div class="col-1-2">
                 <div class="grid negative hero" style="background-image: url({{ artwork }}); background-position: {{ vertical_position }} {{ horizontal_position }};"></div>
             </div>
-            <div class="col-1-2">
+            <div class="col-1-2 aside">
                 <ul id="live-recordings-list">
                     {{ entries:listing folder="live-recordings" show_hidden="true" sort_dir="asc" }}
                     <li>
@@ -58,7 +58,7 @@
                                 <h5>{{ composer }}</h5>
                             </div>
                             <div class="col-1-4 text-right">
-                                <a class="sample button x-small pad" data-icon="play" href="{{ sample }}">Play Sample</a>
+                                <a class="sample light button x-small pad" data-icon="play" href="{{ sample }}">Play Sample</a>
                             </div>
                         </article>
                     </li>
