--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -17,6 +17,21 @@ button.button
     width: 100%;
 }
 
+.button.sample[data-icon]
+{
+    border-radius: 100px;
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    padding: 10px;
+}
+
+.aside .button.sample[data-icon]
+{
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    padding: 5px;
+}
+
 .button, .button:link, .button:visited { color: #222; }
 .button:hover { background-color: rgba(0, 0, 0, 0.9); color: #fff; text-decoration: none; }
 .button.xx-small { font-size: 60%; }
@@ -27,7 +42,6 @@ button.button
 .button.x-large { font-size: 120%; }
 .button.xx-large { font-size: 130%; }
 .button.pad { margin: 15px 0; }
-.button.sample[data-icon] { font-size: 2rem; line-height: 2rem; padding: 5px; }
 
 @media (min-width: 768px)
 {
