--- a/_themes/tm3/templates/adams-concerto.html
+++ b/_themes/tm3/templates/adams-concerto.html
@@ -17,28 +17,30 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ downloads_title }}</h2>
 
-        <div class="col-2-3">
-            {{ if downloads }}
-            <div class="grid">
-            {{ downloads }}
-                <div class="col-1-{{ total_results }}">
-                    <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
+        <div class="grid-pad negative">
+            <div class="col-2-3">
+                {{ if downloads }}
+                <div class="grid">
+                {{ downloads }}
+                    <div class="col-1-{{ total_results }}">
+                        <a href="{{ download file="{photo_download}" as="{photo_download}" }}" title="Click to download this photo"><img alt="" src="{{ photo_download }}" /></a>
+                    </div>
+                {{ /downloads }}
                 </div>
-            {{ /downloads }}
+                {{ /if }}
             </div>
-            {{ /if }}
-        </div>
 
-        <div class="col-1-3">
-            {{ get_content from="biography" }}
-            {{ if pdfs }}
-                <div class="grid pad text-center">
-                    {{ pdfs }}
-                    <a class="button pad xx-small expand download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
-                    {{ /pdfs }}
-                </div>
-            {{ endif }}
-            {{ /get_content }}
+            <div class="col-1-3">
+                {{ get_content from="biography" }}
+                {{ if pdfs }}
+                    <div class="grid pad text-center">
+                        {{ pdfs }}
+                        <a class="button pad xx-small expand download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+                        {{ /pdfs }}
+                    </div>
+                {{ endif }}
+                {{ /get_content }}
+            </div>
         </div>
     </div>
     {{ /if }}
@@ -47,7 +49,9 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ video_title }}</h2>
 
-        {{ theme:partial src="video" use_context="true" }}
+        <div class="grid-pad negative">
+            {{ theme:partial src="video" use_context="true" }}
+        </div>
     </div>
     {{ /if }}
 
@@ -55,9 +59,11 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ recording_title }}</h2>
 
-        {{ entries:listing conditions="slug:john-adams-city-noirsaxophone-concerto-david-robertsonst-louis-symphony" folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
-        {{ theme:partial show_samples="true" src="recording" use_context="true" }}
-        {{ /entries:listing }}
+        <div class="grid-pad negative">
+            {{ entries:listing conditions="slug:john-adams-city-noirsaxophone-concerto-david-robertsonst-louis-symphony" folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
+            {{ theme:partial show_samples="true" src="recording" use_context="true" }}
+            {{ /entries:listing }}
+        </div>
     </div>
     {{ /if }}
 
@@ -65,7 +71,7 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ critics_title }}</h2>
 
-        <div class="grid quotes">
+        <div class="grid-pad negative">
             {{ entries:listing conditions="adams_press:1" folder="quotes" show_hidden="true" sort_by="random" }}
                 <div class="col-1-2">
                     <div class="grid-pad">
