--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -22,6 +22,12 @@
 .width-50 { width: 50%; }
 .width-75 { width: 75%; }
 
+.aside
+{
+    background-color: #35383D;
+    padding: 15px !important;
+}
+
 .grid::after,
 .grid-pad::after
 {
