--- a/_themes/tm3/css/themes.css
+++ b/_themes/tm3/css/themes.css
@@ -22,6 +22,8 @@ textarea.light
 
 .dark body { background-color: #111; }
 
+.dark .border-right { border-right: 1px solid rgba(255, 255, 255, 0.1); }
+
 .dark .detail-table th,
 .dark .detail-table td,
 .dark .style-1 { border-color: rgba(255, 255, 255, 0.1); }
