--- a/_themes/tm3/templates/article.html
+++ b/_themes/tm3/templates/article.html
@@ -4,7 +4,7 @@
     <div class="grid-pad">
         <h2 class="style-1">News</h2>
 
-        <div class="grid">
+        <div class="grid-pad negative">
             {{ theme:partial src="article" use_context="true" }}
         </div>
 
