--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -19,6 +19,7 @@ button.button
 
 .button.sample[data-icon]
 {
+    border-width: 2px;
     border-radius: 100px;
     font-size: 2.5rem;
     line-height: 2.5rem;
