--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -33,8 +33,8 @@
 
 .js #year-selector
 {
-    background-color: rgba(255, 255, 255, 0.5);
-    border-color: rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-color: rgba(0, 0, 0, 0.25);
     border-radius: 0;
     cursor: pointer;
     font-size: 22px;
