--- a/_themes/tm3/templates/news.html
+++ b/_themes/tm3/templates/news.html
@@ -4,7 +4,7 @@
     <div class="grid-pad">
         <h2 class="style-1">{{ title }}</h2>
 
-        <div class="grid">
+        <div class="grid-pad negative">
             {{ entries:listing folder="news" show_hidden="false" sort_by="date" sort_dir="desc" }}
             {{ if total_results > 0 }}
             {{ theme:partial src="article" show_view_button="true" use_context="true" }}
