Updated performance page styles.

--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -60,10 +60,11 @@
 {
     .js #year-selector-wrapper
     {
-        bottom: 15px;
-        left: 48%;
+        left: auto;
+        top: 15px;
         margin: 0;
         position: absolute;
+        right: 15px;
         width: 100px;
         z-index: 2;
     }
