Sample button tweaks

--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -5,7 +5,7 @@
         {{ if recording_url }}</a>{{ endif }}
 
         {{ if show_samples && sample }}
-        <div class="text-center">
+        <div class="grid pad text-center">
             <a class="sample button x-small pad" href="{{ sample }}">Play Sample (MP3)</a>
             <a class="sample button x-small pad" href="{{ sample }}">Play Sample (OGG)</a>
         </div>
