--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -21,15 +21,18 @@ button.button
 {
     border-width: 2px;
     border-radius: 100px;
+    color: rgba(255, 255, 255, 0.9);
     font-size: 2.5rem;
     line-height: 2.5rem;
+    margin: 0 auto;
     padding: 10px;
+    width: auto;
 }
 
 .aside .button.sample[data-icon]
 {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
+    font-size: 1.35rem;
+    line-height: 1.35rem;
     padding: 5px;
 }
 
