--- a/_themes/tm3/css/home.css
+++ b/_themes/tm3/css/home.css
@@ -21,6 +21,10 @@
 
 #live-recordings-list li:last-of-type { border-bottom: 0; }
 
+#live-recordings-list [class*=col-] { float: left; }
+#live-recordings-list .col-1-4 { width: 25%; }
+#live-recordings-list .col-3-4 { width: 75%; }
+
 @media (min-width: 1024px)
 {
     #live-recordings .hero
